    - is_practical(n)          is n a practical number
    - is_trial_prime(n)        primality using trial division
    - is_almost_prime(k,n)     does n have exactly k prime factors
    - is_divisible(n,d)        is n exactly divisible by d
    - is_congruent(n,c,d)      is n congruent to c mod d
    - is_qr(a,n)               is n a quadratic residue mod n
    - prime_bigomega(n)        number of factors (with multiplicity)
    - prime_omega(n)           number of factors (distinct)
    - powerful_count(n[,k])    count of k-powerful numbers <= n
    - is_perfect_power(n)      is n a perfect power (1,4,8,9,16,25,..)
    - next_perfect_power(n)    next perfect power: p > n
    - prev_perfect_power(n)    previous perfect power: p < n
    - perfect_power_count(n)      count of perfect powers <= n
    - perfect_power_count(lo,hi)  count of perfect powers <= lo <= n <= hi
    - nth_perfect_power(n)        the nth perfect power
    - nth_perfect_power_approx(n) fast approximate nth perfect power
    - prime_power_count(n)     count of prime powers <= n
    - prime_power_count(lo,hi) count of prime powers <= lo <= n <= hi
    - lshiftint(n,[k])         left shift n by k bits (default 1)
    - rshiftint(n,[k])         right shift n by k bits (default 1)
    - rashiftint(n,[k])        arithmetic right shift n by k bits
    - add1int(n)               increment n
    - sub1int(n)               decrement n
    - signint(n)               sign of n (-1, 0, 1)
    - cmpint(a,b)              compare (-1,0,1 for a<b, a=b, a>b)
    - cmpabsint(a,b)           compare absolute values
    - setbit(n,k)              set bit k of n
    - clrbit(n,k)              clear bit k of n
    - notbit(n,k)              complement bit k of n
    - tstbit(n,k)              return bit k of n (0 or 1)
    - bitand(a,b)              bitwise and
    - bitor(a,b)               bitwise or
    - bitxor(a,b)              bitwise xor
    - bitnot(n)                bitwise not (complement)